force-app/main/default/objects/AiAnalysisResult__c/AiAnalysisResult__c.object-meta.xml
<CustomObject>
    <description>Przechowuje wyniki analizy CV przeprowadzonej przez AI</description>
    <label>AI Analysis Result</label>
    <nameField>
        <displayFormat>AIR-{0000}</displayFormat>
        <label>Analysis Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Analysis Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>