force-app/main/default/objects/AiAnalysisResult__c/fields/AdditionalSkills__c.field-meta.xml
<CustomField>
    <fullName>AdditionalSkills__c</fullName>
    <description>Unikalne umiejętności kandydata, które nie były wymienione w ogłoszeniu, ale mogą być wartościowe</description>
    <inlineHelpText>Unikalne umiejętności kandydata, które nie były wymienione w ogłoszeniu, ale mogą być wartościowe</inlineHelpText>
    <label>Additional Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>