force-app/main/default/objects/AiAnalysisResult__c/fields/AnalysisSummary__c.field-meta.xml
<CustomField>
    <fullName>AnalysisSummary__c</fullName>
    <description>Krótki tekstowy opis mocnych stron kandydata i obszarów, w których może nie spełniać wymagań</description>
    <inlineHelpText>Krótki tekstowy opis mocnych stron kandydata i obszarów, w których może nie spełniać wymagań</inlineHelpText>
    <label>Analysis Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField> 