force-app/main/default/objects/AiAnalysisResult__c/fields/Certifications__c.field-meta.xml
<CustomField>
    <fullName>Certifications__c</fullName>
    <description>Lista certyfikatów znalezionych w CV kandydata, ze szczególnym uwzględnieniem certyfikatów Salesforce.</description>
    <inlineHelpText>Lista certyfikatów znalezionych w CV kandydata.</inlineHelpText>
    <label>Certifications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField> 