force-app/main/default/objects/AiAnalysisResult__c/fields/KeyHighlights__c.field-meta.xml
<CustomField>
    <fullName>KeyHighlights__c</fullName>
    <description>2-3 najważniejsze punkty wyróżniające kandydata</description>
    <inlineHelpText>2-3 najważniejsze punkty wyróżniające kandydata</inlineHelpText>
    <label>Key Highlights</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField> 