force-app/main/default/objects/AiAnalysisResult__c/fields/PotentialConcerns__c.field-meta.xml
<CustomField>
    <fullName>PotentialConcerns__c</fullName>
    <description>Obszary wymagające doprecyzowania podczas rozmowy kwalifikacyjnej</description>
    <inlineHelpText>Obszary wymagające doprecyzowania podczas rozmowy kwalifikacyjnej</inlineHelpText>
    <label>Potential Concerns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField> 