force-app/main/default/objects/AiAnalysisResult__c/fields/RawAnalysisResults__c.field-meta.xml
<CustomField>
    <fullName>RawAnalysisResults__c</fullName>
    <description>Surowe wyniki analizy w formacie JSON</description>
    <inlineHelpText>Surowe wyniki analizy w formacie JSON</inlineHelpText>
    <label>Raw Analysis Results</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField> 