force-app/main/default/objects/AiAnalysisResult__c/fields/RecommendationLevel__c.field-meta.xml
<CustomField>
    <fullName>RecommendationLevel__c</fullName>
    <description>Uproszczona ocena kandydata</description>
    <inlineHelpText>Uproszczona ocena kandydata</inlineHelpText>
    <label>Recommendation Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 